2009-04-27  Miguel de Icaza  <miguel@novell.com>

	* driver.cs: Add a flag to work as a replacement for CSC in VS.

2009-04-24  Miguel de Icaza  <miguel@novell.com>

	* complete.cs: No idea how gonzalo got a null in the list, but
	avoid crashing.

2009-04-24  Miguel de Icaza  <miguel@novell.com>

	* complete.cs (CompletionElementInitializer): New completion class
	to support completing inside a C# 3 element initializer, so this
	allows completion for Silverlight situations where it is very
	common to do:

	new TextBlock () { Fo<TAB>

	(CompletionSimpleName): Expose the prefix that was
	passed to the simple name.

	* cs-parser.jay (object_or_collection_initializer): Add support
	for element_initializers.

	* expression.cs (CollectionOrObjectInitializers.DoResolve):
	special case completion expressions as this method aggressively
	collects data before it operates, and errors were being thrown
	earlier than we were able to complete.

2009-04-23  Miguel de Icaza  <miguel@novell.com>

	* eval.cs: Make getcompletions silent and enable debugging output
	if the -v option is passed.

	* namespace.cs (NamespaceEntry.CompletionGetTypesStartingWith):
	Consider looking up the namespace that matches the prefix being
	used. 

	This is part of the support for allowing completions like:
	`System.Co<TAB>' to complete to System.Console.

	* complete.cs (CompletionSimpleName.AppendResults): Make this
	routine reusable.

2009-04-21  Raja R Harinath  <harinath@hurrynot.org>

	* cs-parser.jay (GetTokenName): Mark GENERATE_COMPLETION and
	COMPLETE_COMPLETION as internal.

2009-04-17  Miguel de Icaza  <miguel@novell.com>

	* complete.cs: Include namespace resolution in simple names as
	well as global types and types in the using scope in the
	resolution. 

	* namespace.cs: Supporting infrastrcture to provide completions
	based on the current using scope. 

	* eval.cs: Introduce an entry point that allows for initialization
	to return a list of the files passed on the command line.
